--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
             <fieldset class="box services">
               <legend>Services</legend>
               <ol>
-                <li>Professional interior painting</li>
+               
+                <li>PROFESSIONAL INTERIOR PAINTING</li>
                 <li>ELECTRICAL</li>
               </ol>
             </fieldset>
